
Fork Version: 0.1.0
Date: 09.19.2024
  Features:
    - Added logic to include molten metal recipes if they are missing.
    - Added a bunch of missing alloy recipies
    - Tiered the recipies to you need higher tier mixers for higher tier recipies
    - Attached all alloy recipies to appropriate techs
    - Moved the fluid inputs/outputs to match model
---------------------------------------------------------------------------------------------------



Version: 1.1.7
Date: 09.01.2023
  Bugfixes:
    - Make compatible with Seablock
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 08.01.2023
  Features:
    - Added steel mixing recipes
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 04.01.2023
  Bugfixes:
    - Fix subcategories being split when they shouldn't have been
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 04.01.2023
  Bugfixes:
    - Fixed graphics of the entity being "jittery"
    - Fixed broken unlocks for some researchs
  Features:
    - Added Silicon, CoNi and CrNi molten iron production
---------------------------------------------------------------------------------------------------
Version: 1.1
Date: 29.12.2023
  Bugfixes:
    - Fixed unlock of molten alloy mixing recipes
  Features:
    - Added Manganese molten iron production
---------------------------------------------------------------------------------------------------
Version: 0.17.10
Date: 29.09.2019
  Bugfixes:
    - Fixed Induction Furnace recipes. The Induction Furnace was using the hidden angels items instead of the override ones.
---------------------------------------------------------------------------------------------------
Version: 0.17.9
Date: 07.09.2019
  Features:
    - Added ShinyAngelGFX support.