@@ -4,6 +4,7 @@ if angelsmods and  angelsmods.refining then
 	angelsmods.functions.RB.set_fallback("item", "alloym-2", { { "block-production-2", 1 }, { "alloy-mixer" } } )
 	angelsmods.functions.RB.set_fallback("item", "alloym-3", { { "block-mprocessing-3", 1 }, { "alloy-mixer-2" } } )
 	angelsmods.functions.RB.set_fallback("item", "alloym-4", { { "block-mprocessing-4", 1 }, { "alloy-mixer-3" } } )
+	
 	--Rehide Unused plates
 	--Nickel
 	if aragasmods.switchs.nickel then
